--- a/Session15/Calculator/style.css
+++ b/Session15/Calculator/style.css
@@ -1,4 +1,4 @@
-body{
+body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     display: flex;
     justify-content: center;
@@ -8,17 +8,18 @@ body{
     background-color: rgb(148, 233, 179);
 }
 
-.calculator{
+.calculator {
     background-color: gray;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgb(0, 0, 0,0.1);
+    box-shadow: 0 0 10px rgb(0, 0, 0, 0.1);
     padding: 20px;
     width: 350px;
 }
 
-#result{
+#result {
     font-size: 20px;
     border: none;
+    border-radius: 5px;
     width: 97%;
     text-align: right;
     margin-bottom: 10px;
@@ -28,23 +29,23 @@ body{
 
 .buttons {
     display: grid;
-    grid-template-columns: repeat(4,1fr);
-    gap:10px
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px
 }
+
 button {
     font-size: 18px;
-    padding:10px;
-    border-radius: 25%;
+    padding: 10px;
+    border-radius: 20px;
     border: none;
     background-color: rgb(28, 27, 27);
     cursor: pointer;
     color: white;
 }
 
-button:hover{
+button:hover {
     background-color: lightgray;
     color: black;
-    transform: scale(1.1);
-    transition: all 0.2 0.3 linear;
-
+    transition: all 0.1 0.3 linear;
+    transform: scale(1.05);
 }
