--- a/Session15/task2/style.css
+++ b/Session15/task2/style.css
@@ -5,35 +5,49 @@ body {
     height: 100vh;
     margin: 0;
     background-color: #f0f0f0;
-  }
-  
-  .keyboard {
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+}
+
+.keyboard {
     display: grid;
     grid-template-columns: repeat(10, 1fr);
-    gap: 5px;
-    padding: 10px;
-    background-color: #ffffff;
+    gap: 8px;
+    padding: 20px;
+    background-color: #4a4747;
     border: 1px solid #ddd;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    border-radius: 5px;
-  }
-  
-  .key {
+    border-radius: 0px 0px 5px 5px ;
+    width: 500px;
+}
+
+.key {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 40px;
     height: 40px;
-    border: 1px solid #ccc;
-    background-color: #f9f9f9;
+    border: 1px solid #232222;
+    background-color: #0a0909;
+    color: #ffff;
     cursor: pointer;
     font-size: 18px;
     border-radius: 3px;
-  }
-  
-  .key:hover {
+}
+
+.result {
+    text-align: center;
+    font-size: 20px;
+    background-color: #c1b5b5;
+    border-radius: 5px 5px 0px 0px ;
+    font-weight: bold;
+    width: 540px;
+}
+
+.key:hover {
     background-color: #f0f0f0;
-  }
-  #container{
-    display: flex;
-  }
+    color: #0a0909;
+}
