--- a/Session15/task2/style.css
+++ b/Session15/task2/style.css
@@ -4,7 +4,9 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    background-color: #f0f0f0;
+    background-color: #8EC5FC;
+background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
+
 }
 
 .container {
@@ -18,7 +20,6 @@ body {
     gap: 8px;
     padding: 20px;
     background-color: #4a4747;
-    border: 1px solid #ddd;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     border-radius: 0px 0px 5px 5px ;
     width: 500px;
@@ -41,13 +42,13 @@ body {
 .result {
     text-align: center;
     font-size: 20px;
-    background-color: #c1b5b5;
+    background-color: #fff6f6;
     border-radius: 5px 5px 0px 0px ;
     font-weight: bold;
     width: 540px;
 }
 
 .key:hover {
-    background-color: #f0f0f0;
+    background-color: #fff6f6;
     color: #0a0909;
 }
