--- a/Session15/Virtual_Keyboard/style.css
+++ b/Session15/Virtual_Keyboard/style.css
@@ -1,9 +1,6 @@
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    
     height: 100vh;
-    margin: 0;
     background-color: #8EC5FC;
     background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
 
@@ -11,7 +8,10 @@ body {
 
 .container {
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
+    margin: 5em;
 }
 
 .keyboard {
@@ -51,4 +51,21 @@ body {
 .key:hover {
     background-color: #fff6f6;
     color: #0a0909;
+}
+.clearBtn{
+    text-align: center;
+}
+#btn{
+    background-color: #232222;
+    color: #fff6f6;
+    width: 5em;
+    padding: 5px;
+    border: none;
+    border-radius: 1em;
+    font-size: 20px;
+    font-weight: bold;
+}
+#btn:hover{
+    background-color: #a09c9c;
+    color: #1c1818;
 }
