--- a/Session15/Virtual_Keyboard/style.css
+++ b/Session15/Virtual_Keyboard/style.css
@@ -11,7 +11,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin: 5em;
+
 }
 
 .keyboard {
@@ -69,3 +69,8 @@ body {
     background-color: #a09c9c;
     color: #1c1818;
 }
+
+
+/*
+C:\Users\hp\OneDrive\Documents\Eduonix-FSD\Session15\Virtual_Keyboard\index.html
+/
