--- a/Project-1/style.css
+++ b/Project-1/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 body{
-   background-color: rgb(229, 229, 149);
+   background-color: rgb(225, 222, 222);
    text-align: center;
 }
 .container{
@@ -17,6 +17,7 @@ body{
     padding: 30px;
     box-shadow: 2px 4px 7px rgb(69, 68, 68);
     font-family: sans-serif;
+    color: rgb(79, 72, 72);
 }
 .container p{
     font-size: 20px;
@@ -26,13 +27,14 @@ body{
     width: 400px;
     padding: 5px;
     border: 1px solid grey;
+    border-radius: 5px;
 }
 h1{
-    color: rgb(84, 12, 152);
+    color: rgb(28, 24, 24);
     margin: 50px;
 }
 h2{
-    color: rgb(84, 12, 152);
+    color: rgb(28, 24, 24);
 }
 .btn{
     margin: 20px;
@@ -40,7 +42,7 @@ h2{
 #btnItem{
     font-size: 17px;
     padding: 10px;
-    background-color: rgb(84, 12, 152);
+    background-color: rgb(21, 29, 22);
     color: white;
     border: none;
     border-radius: 10px;
