--- a/Project-2/style.css
+++ b/Project-2/style.css
@@ -1,18 +1,28 @@
+*{
+    box-sizing: border-box;
+    font-family: sans-serif;
+}
+body{
+    background-color: blanchedalmond;
+}
 .container{
-    background-color: wheat;
+    background-color: white;
     border-radius: 10px;
     width: 380px;
     margin-left: auto;
     margin-right: auto;
     padding: 20px;
+}
+h1{
     text-align: center;
-    font-family: sans-serif;
 }
 .input{
     width: 300px;
     padding: 5px;
     border: none;
     border-radius: 3px;
+    background-color: rgb(237, 239, 241);
+    border-bottom: 1px solid gray;
 }
 .btn{
     background-color: rgb(41, 143, 6);
