--- a/Project-2/style.css
+++ b/Project-2/style.css
@@ -1,9 +1,10 @@
+
 *{
     box-sizing: border-box;
     font-family: sans-serif;
 }
 body{
-    background-color: blanchedalmond;
+    background-color: rgb(2, 1, 25);
 }
 .container{
     background-color: white;
@@ -15,41 +16,35 @@ body{
 }
 h1{
     text-align: center;
+    color: white;
 }
-.input{
-    width: 300px;
+h2{
+    text-align: center;
+}
+#input{
+    width: 280px;
     padding: 5px;
     border: none;
     border-radius: 3px;
-    background-color: rgb(237, 239, 241);
-    border-bottom: 1px solid gray;
+    border: 1px solid rgb(17, 9, 139);
+    font-size: 18px;
+
 }
 .btn{
     background-color: rgb(41, 143, 6);
-    padding: 5px;
+    padding: 7px;
     border: none;
     border-radius: 3px;
     color: white;
+    font-size: 18px;
+
 }
 
-ul li{
+ol li{
     font-size: 20px;
     user-select: none;
     padding: 10px;
     position: relative;
     cursor: pointer;
     margin: 10px;
-    list-style: none;
-}
-ul li::before{
-    content: "";
-    position: absolute;
-    height: 27px;
-    width: 27px;
-    border-radius: 50%;
-    background-image: url(./circle-icon.png);
-    background-size: cover;
-    background-position: center;
-    left: -35px;
-    background-color: white;
 }
