--- a/Project-2/style.css
+++ b/Project-2/style.css
@@ -8,22 +8,25 @@ body{
 }
 .container{
     background-color: white;
-    border-radius: 10px;
-    width: 380px;
+    width: 600px;
+    height: 400px;
     margin-left: auto;
     margin-right: auto;
-    padding: 20px;
+    padding: 25px;
+    overflow-y: scroll;
 }
 h1{
     text-align: center;
     color: white;
+    margin: 3rem;
 }
 h2{
     text-align: center;
+    color: rgb(8, 4, 96);
 }
 input{
-    width: 280px;
-    padding: 7px;
+    width: 460px;
+    padding: 6px;
     padding-right: 0%;
     border: none;
     border-radius: 3px;
@@ -33,6 +36,7 @@ input{
 button{
     padding: 7px;
     border: none;
+    width: 70px;
     border-radius: 3px;
     color: white;
     font-size: 18px;
@@ -46,9 +50,9 @@ button{
     position: relative;
     background-color: rgb(8, 4, 96);
     color: white;
-    font-size: 19px;
+    font-size: 18px;
     border-radius: 3px;
-    padding: 7px;
+    padding: 5px;
     text-align: left;
  }
  .text ul i{
